feat/fix: setup for running ingestor, processor and API

--- a/cmd/go-api-service/Dockerfile
+++ b/cmd/go-api-service/Dockerfile
@@ -5,16 +5,18 @@ WORKDIR /app
 COPY go.mod go.sum ./
 RUN go mod download
 
-COPY ./cmd/go-processor ./cmd/go-processor
+COPY ./cmd/go-api-service ./cmd/go-api-service
 COPY ./internal ./internal
 
-RUN go build -o /app/processor ./cmd/go-processor
+RUN go build -o /app/api-service ./cmd/go-api-service
 
 FROM alpine:latest
 
 WORKDIR /app
 
 # grab compiled code from the top image
-COPY --from=builder /app/processor .
+COPY --from=builder /app/api-service .
 
-CMD ["./processor"]
+EXPOSE 8000
+
+CMD ["./api-service"]
