--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,13 @@ jobs:
       with:
         go-version: '1.24'
 
+    - name: Permit runner to access MongoDB Atlas
+      uses: textbook/atlas-ip@v1
+      with:
+        atlas-private-key: ${{ secrets.ATLAS_PRIVATE_KEY }}
+        atlas-public-key: ${{ secrets.ATLAS_PUBLIC_KEY }}
+        group-id: ${{ vars.ATLAS_GROUP_ID }}
+
     - name: Test
       env:
         MONGO_URL_TEST: ${{ secrets.MONGO_URL_TEST }}
