python-analytics: feat: very-simple CLI client for VWAP updates

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,8 @@ services:
     build:
       context: ./python-analytics
       dockerfile: ./Dockerfile
+    ports:
+      - "8888:8888"
     depends_on:
       - kafka
     volumes:
